[package]
name = "funfun"
version = "0.2.2"
authors = ["Dominic Burkart <dominicburkart@gmail.com>"]
license = "MIT"
description = "Macros for working with closures."
repository = "https://github.com/DominicBurkart/funfun"
categories = ["memory-management"]
keywords = ["macro", "functional"]

[badges]
travis-ci = { repository = "DominicBurkart/funfun" }

[lib]
[dependencies]
