[package]
name = "funfun"
version = "0.2.4"
authors = ["Dominic Burkart <dominicburkart@gmail.com>"]
license = "MIT"
description = "Macros for working with closures."
repository = "https://github.com/DominicBurkart/funfun"
categories = ["memory-management"]
keywords = ["macro", "functional"]

[badges]
travis-ci = { repository = "DominicBurkart/funfun" }

[lib]
[dependencies]
cute = "0.3.0"
tt-call = "1.0.2"
proc-macro2 = "0.4.15"
syn = "0.14.9"
quote = "0.6.8"